# Flair

./: .clang-format  .gitignore  CMakeLists.txt  Editor.c  README.md  Text.txt  dir.cmd  makefile
include/: FileText.h  LinkedList.h  languageC.h  languages.h  openedFile.h
include/languages/: languageC.h
linkedlist/: LinkedList.c  LinkedList.h
openedFile/: openedFile.c  openedFile.h
src/: Editor.c
src/languages/: FileText.c  languageC.c
src/linkedlist/: LinkedList.c
src/openedFile/: openedFile.c
src/types/: FileText.c  languageC.c
types/: FileText.c  FileText.h  languageC.c  languageC.h
